# Projet_8INF974

./: README.md  effnet copy.ipynb  effnet.ipynb  mobilenet.ipynb  mobilenetv3.ipynb  pipeline.py  pyproject.toml  vision_transformer.py  vit.ipynb
