[tool.poetry]
name = "projet-8inf974"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "2.2.2"
timm = "^0.9.16"
ipykernel = "^6.29.4"
lightning = "2.2.2"
scipy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
